--- a/reactivepage/src/index.css
+++ b/reactivepage/src/index.css
@@ -13,3 +13,20 @@
     --color-mischka-900: #1B1B21;
     --color-mischka-950: #101014;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+    width: 6px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+    background: #D1D2D6;
+    border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+    background: #B7B9BF;
+}
